tests/snapshots/examples_fixtures/type_system__failing__01_compile_type_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/01_compile_type_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

The 1st argument to `add` has the wrong type.

  --> examples/type_system/failing/01_compile_type_mismatch.flx:6:5
  |
1 | fn add(a: Int, b: Int) -> Int {

2 |     a + b

3 | }

4 | 

5 | 

6 | add("x", 2)
  |     ^^^
  |     --- this argument is `String`

Help:
  Expected `Int` as the 1st argument.
== stdout ==
<not executed>
